--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -4,83 +4,83 @@
 .login {
   padding-top: 50px;
 
-  &-image {
-    height: 300px;
+  // &-image {
+  //   height: 300px;
 
-    @include from($medium) {
-      height: 450px;
-    }
+  //   @include from($medium) {
+  //     height: 450px;
+  //   }
 
-    img {
-      animation: animationimg 2s linear infinite;
-      width: 220px;
-      border-radius: 50%;
+  //   img {
+  //     animation: animationimg 2s linear infinite;
+  //     width: 220px;
+  //     border-radius: 50%;
 
-      @include from($medium) {
-        width: 350px;
-      }
-    }
+  //     @include from($medium) {
+  //       width: 350px;
+  //     }
+  //   }
 
-    @keyframes animationimg {
-      0% {
-        box-shadow: 0 0 0 0 rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
-      }
+  //   @keyframes animationimg {
+  //     0% {
+  //       box-shadow: 0 0 0 0 rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
+  //     }
 
-      30% {
-        box-shadow: 0 0 0 25px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
-        width: 240px;
+  //     30% {
+  //       box-shadow: 0 0 0 25px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
+  //       width: 240px;
 
-        @include from($medium) {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
-          width: 380px;
-        }
-      }
+  //       @include from($medium) {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
+  //         width: 380px;
+  //       }
+  //     }
 
-      65% {
-        box-shadow: 0 0 0 25px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
+  //     65% {
+  //       box-shadow: 0 0 0 25px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
 
-        @include from($medium) {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
-          width: 380px;
-        }
-      }
+  //       @include from($medium) {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
+  //         width: 380px;
+  //       }
+  //     }
 
-      100% {
-        box-shadow: 0 0 0 0 rgba(147, 210, 228, 0), 0 0 0 25px rgba(147, 210, 228, 0);
-        width: 220px;
+  //     100% {
+  //       box-shadow: 0 0 0 0 rgba(147, 210, 228, 0), 0 0 0 25px rgba(147, 210, 228, 0);
+  //       width: 220px;
 
-        @include from($medium) {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
-          width: 350px;
-        }
+  //       @include from($medium) {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
+  //         width: 350px;
+  //       }
 
-      }
-    }
+  //     }
+  //   }
 
-    @include from($medium) {
-      @keyframes animationimg {
-        0% {
-          box-shadow: 0 0 0 0 rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
-        }
+  //   @include from($medium) {
+  //     @keyframes animationimg {
+  //       0% {
+  //         box-shadow: 0 0 0 0 rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
+  //       }
 
-        30% {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
-          width: 380px;
-        }
+  //       30% {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 0 rgba(147, 210, 228, 0.6);
+  //         width: 380px;
+  //       }
 
-        65% {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
-          width: 380px;
-        }
+  //       65% {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
+  //         width: 380px;
+  //       }
 
-        100% {
-          box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
-          width: 350px;
+  //       100% {
+  //         box-shadow: 0 0 0 35px rgba(147, 210, 228, 0.6), 0 0 0 25px rgba(147, 210, 228, 0);
+  //         width: 350px;
 
-        }
-      }
-    }
-  }
+  //       }
+  //     }
+  //   }
+  // }
 
   &-title {
     h1 {
